setting up a coordinator pattern

--- a/portal-to-work/portal-to-work/Info.plist
+++ b/portal-to-work/portal-to-work/Info.plist
@@ -50,5 +50,7 @@
 		<string>BrandonText-Regular.otf</string>
 		<string>BrandonText-Bold.otf</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Find location to determine job distances</string>
 </dict>
 </plist>
